<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.stockpro.StockDetailScreenActivity"
    android:background="@drawable/black_plaid" >
    
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/stock_quote"
	        android:textSize="25sp"
	        android:textStyle="bold"
	        android:paddingTop="50dp"
	        android:paddingBottom="30dp"
	        android:textColor="@color/my_color_amber" />
	
	    <TableLayout
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="3.68"
	        android:orientation="vertical"
	        android:paddingTop="10dp"
	        android:paddingBottom="0dp" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/refreshed_at" />
	
	            <TextView
	                android:id="@+id/dateAndTime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal"
	                android:text="@string/time_x"
	                android:textStyle="bold"
	                android:layout_weight="3"
	                android:textColor="@color/my_color_chrome_yellow" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/symbol_colon" />
	
	            <TextView
	                android:id="@+id/stockName"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/company" />
	
	            <TextView
	                android:id="@+id/companyName"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/current_price" />
	            
	            <TextView
	                android:id="@+id/priceOfStock"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow5"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/week_high" />
	
	            <TextView
	                android:id="@+id/weekHigh"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow6"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/week_low" />
	
	            <TextView
	                android:id="@+id/weekLow"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow7"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                style="@style/TextViewLabelItems"
	                android:text="@string/volume" />
	
	            <TextView
	                android:id="@+id/volume"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	        
	        <TableRow
	            android:id="@+id/tableRow8"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:orientation="horizontal" >
	
	            <TextView
	                android:text="@string/change"
	                style="@style/TextViewLabelItems" />
	
	            <TextView
	                android:id="@+id/change"
	                style="@style/TextViewLabelItems"
	                android:text="@string/five_x" />
	        </TableRow>
	    </TableLayout>
	
	    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="98dp"
	        android:layout_weight="0.24"
	        android:orientation="horizontal" >
	
		    <Button
		        android:id="@+id/list"
		        android:layout_width="80dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentStart="true"
		        android:background="@drawable/button_with_rounded_corners"
		        android:text="@string/list"
		        android:textColor="@color/my_color_chrome_yellow"
		        android:textStyle="bold" />
	
		    <Button
		        android:id="@+id/more"
		        android:layout_width="80dp"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
	            android:layout_alignParentRight="true"
	            android:layout_alignParentEnd="true"
		        android:layout_gravity="center_horizontal" 
		        android:background="@drawable/button_with_rounded_corners"
		        android:textStyle="bold"
		        android:text="@string/more"
		        android:textColor="@color/my_color_chrome_yellow" />
	    </RelativeLayout>
    
    </LinearLayout>
    
</ScrollView>