<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_plaid"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.activities.stockpro.MainScreenActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/my_color_amber"
	        android:textStyle="bold"
	        android:textSize="25sp"
	        android:paddingBottom="5dp"
	        android:paddingTop="5dp"
	        android:text="@string/app_name" />
        
        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/title"
            android:layout_toRightOf="@+id/title"
            android:contentDescription="@string/refresh_stuff"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/action_settings"
            android:src="@android:drawable/ic_menu_preferences" />
        
    </RelativeLayout>
    

    <View
           style="@style/LineSeparator" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/enterSymbol"
            style="@style/EditTextInputSymbolQuantity"
            android:layout_width="95dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/symbol"
            android:inputType="text" />
        <EditText
            android:id="@+id/enterQty"
            style="@style/EditTextInputSymbolQuantity"
            android:layout_width="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/enterSymbol"
            android:layout_toRightOf="@+id/enterSymbol"
            android:hint="@string/quantity"
            android:inputType="number" />
        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@id/enterQty"
            android:layout_toRightOf="@+id/enterQty"
            android:background="@drawable/button_with_rounded_corners"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/add"
            android:textColor="@color/my_color_chrome_yellow" />
    </RelativeLayout>
    <View
           style="@style/LineSeparator" />

    <ListView
        android:id="@+id/my_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>